closed all dropdowns + fix spacing in form

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,7 @@ body {
 }
 
 .form-row {
-	display: flex;
+	display: none;
 	gap: 20px;
 }
 
@@ -73,14 +73,10 @@ body {
 	margin-top: 5px;
 }
 
-.select-container {
-	margin-bottom: 20px;
-}
-
 .select-container select {
 	width: 100%;
-	padding: 10px;
-	border-radius: 6px;
+	padding: 1rem;
+	border-radius: 12px;
 	border: 1px solid var(--border-color);
 	background-color: white;
 }
@@ -108,8 +104,8 @@ select {
 	width: 100%;
 	padding: 12px;
 	border: 1px solid var(--border-color);
-	border-radius: 6px;
-	font-size: 14px;
+	border-radius: 12px;
+	font-size: 16px;
 	appearance: none;
 	background-color: white;
 	cursor: pointer;
@@ -151,7 +147,7 @@ select {
 }
 
 .option-description {
-	font-size: 14px;
+	font-size: 16px;
 	color: #666;
 	margin-top: auto;
 }
@@ -160,12 +156,13 @@ select {
 	width: 100%;
 	padding-left: 1rem;
 	padding-right: 1rem;
-	border: 1px solid var(--border-color);
+	border: 2px solid var(--border-color);
 	border-radius: 12px;
 	font-size: 16px;
 	box-sizing: border-box;
 	color: rgb(143, 143, 143);
-	height: 50px;
+	height: 54px;
+	font-family: Arial, sans-serif;
 }
 
 .number-input:placeholder-shown {
@@ -203,13 +200,17 @@ select {
 @media (max-width: 768px) {
 	.form-row {
 		flex-direction: column;
+		gap: 0px;
+	}
+
+	.form-column {
+		margin-top: 0px;
 	}
 
 	.modal-content {
 		width: 100% !important;
 		overflow-y: scroll;
-		margin-left: 4rem;
-		margin-right: 4rem;
+		box-sizing: border-box;
 	}
 
 	.options-grid {
@@ -229,7 +230,7 @@ select {
 	padding-left: 1rem;
 	padding-right: 1rem;
 	background: white;
-	border: 1px solid var(--border-color);
+	border: 2px solid var(--border-color);
 	border-radius: 12px;
 	cursor: pointer;
 	display: flex;
@@ -237,6 +238,7 @@ select {
 	align-items: center;
 	color: rgb(143, 143, 143);
 	height: 50px;
+	font-size: 16px;
 }
 
 .custom-select-trigger.has-value {
@@ -264,10 +266,10 @@ select {
 	right: 0;
 	background: white;
 	border: 1px solid var(--border-color);
-	border-radius: 6px;
+	border-radius: 12px;
 	margin-top: 4px;
 	display: none;
-	z-index: 10;
+	z-index: 1000;
 }
 
 .custom-select-container.open .custom-options {
@@ -275,12 +277,13 @@ select {
 }
 
 .custom-option {
-	padding: 10px;
+	padding: 1rem;
 	cursor: pointer;
 }
 
 .custom-option:hover {
 	background: var(--hover-color);
+	border-radius: 12px;
 }
 
 .custom-option.selected {
@@ -306,7 +309,7 @@ select {
 	padding-left: 1rem;
 	padding-right: 1rem;
 	background: white;
-	border: 1px solid var(--border-color);
+	border: 2px solid var(--border-color);
 	border-radius: 12px;
 	cursor: pointer;
 	display: flex;
@@ -314,6 +317,7 @@ select {
 	align-items: center;
 	color: rgb(143, 143, 143);
 	height: 50px;
+	font-size: 16px;
 }
 
 .custom-multi-select-container .custom-select-trigger.has-value {
@@ -341,10 +345,10 @@ select {
 	right: 0;
 	background: white;
 	border: 1px solid var(--border-color);
-	border-radius: 6px;
+	border-radius: 12px;
 	margin-top: 4px;
 	display: none;
-	z-index: 10;
+	z-index: 1000;
 }
 
 .custom-multi-select-container.open .custom-options {
@@ -352,7 +356,7 @@ select {
 }
 
 .custom-multi-select-container .custom-option {
-	padding: 10px;
+	padding: 1rem;
 	cursor: pointer;
 	display: flex;
 	justify-content: space-between;
@@ -393,6 +397,7 @@ select {
 
 .custom-multi-select-container .custom-option:hover {
 	background: var(--hover-color);
+	border-radius: 12px;
 }
 
 .custom-multi-select-container .custom-option.selected {
